[tool.poetry]
name = "sample_app"
version = "0.1.0"
description = "This is Sample app"
authors = ["I-s-23 <shun9268@egmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
